service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-car-service  # Name of the service
  labels:
    app: my-car  # Label to associate the service with the app
spec:
  selector:
    app: my-car  # Match the pods with the 'app: my-car' label
  ports:
    - protocol: TCP
      port: 80  # Port exposed to the outside world
      targetPort: 8080  # Port on the container that the app listens on
  type: ClusterIP  # Internal service type (can be changed based on your needs)
